fixing z-index for likes in boxes when lighbox is on

--- a/src/instagram-grid.css
+++ b/src/instagram-grid.css
@@ -51,7 +51,7 @@ body {
 	padding:3px 5px;
 	background-color:rgba(0,0,0,.5);
 	border-radius:3px;
-	z-index: 10;
+	z-index: 1;
 }
 .insta-heart {
 	width:10px;
@@ -63,6 +63,7 @@ body {
 	width:100%;
 	height:100%;
 	background-color:rgba(0,0,0,.8);
+	z-index: 20;
 }
 .insta-block-large-close {
 	position:absolute;
